@@ -6,7 +6,6 @@ asap tasks
 * system should configure based on acme provider, not url | how do we test?
 * json upload of account keys
 * tool to import all letsencrypt account keys
-* parse letsencrypt account key data for the right auth/provider
 * update account/key authentication system to hit the right endpoint (or not hit unconfigured endpoints)
 
 * build authorization deactivate tool
