@@ -35,7 +35,7 @@ enable_views_admin = True
 requests.disable_ssl_warning = True
 
 # this is pebble or fake_boulder
-certificate_authority = https://acme-staging.api.letsencrypt.org
+certificate_authority = letsencrypt-v1-staging
 # certificate_authority_testing = True
 
 enable_redis = True
