@@ -57,6 +57,7 @@
 - add acme-event-log and acme-challenge-log
 - account-key/new is now account-key/upload
 - account-key/upload now takes letsencrypt jwk data and payloads
+- parse letsencrypt account key data for the right auth/provider
 
 
 0.1.5
